--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,9 @@
   vertical-align: top;
   border: 1px solid salmon;
 }
+
+#sketchPad {
+  border: 1px solid black;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 20px / 10px;
+}
